--- a/index.html
+++ b/index.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Seu Nome – Website Acadêmico</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- Hero / Banner -->
-    <header class="hero">
-        <div class="container">
-            <h1></h1>
-            <p></p>
-            <a href="#sobre" class="btn"></a>
-        </div>
-    </header>
+  <!-- Header / Hero -->
+  <header class="hero">
+    <div class="container">
+      <h1>Seu Título Principal</h1>
+      <p>Uma frase de impacto ou missão acadêmica.</p>
+      <a href="#sobre" class="btn">Saiba Mais</a>
+    </div>
+  </header>
 
-    <!-- Sobre -->
-    <section id="sobre" class="section">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+  <!-- Sobre -->
+  <section id="sobre" class="section">
+    <div class="container">
+      <h2>Sobre Mim</h2>
+      <p>Aqui vai um resumo sobre sua trajetória, pesquisa e interesses.</p>
+    </div>
+  </section>
 
-    <!-- Projetos / Pesquisa -->
-    <section id="projetos" class="section alt">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+  <!-- Pesquisa / Projetos -->
+  <section id="projetos" class="section alt">
+    <div class="container">
+      <h2>Projetos & Pesquisa</h2>
+      <p>Descrição dos seus projetos principais ou temas de pesquisa.</p>
+    </div>
+  </section>
 
-    <!-- Publicações -->
-    <section id="publicacoes" class="section">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+  <!-- Publicações -->
+  <section id="publicacoes" class="section">
+    <div class="container">
+      <h2>Publicações</h2>
+      <p>Uma breve explicação das suas publicações importantes.</p>
+    </div>
+  </section>
 
-    <!-- Recursos / Ensino -->
-    <section id="recursos" class="section alt">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+  <!-- Recursos / Ensino -->
+  <section id="recursos" class="section alt">
+    <div class="container">
+      <h2>Ensino / Recursos</h2>
+      <p>Se você tem cursos, materiais ou recursos.</p>
+    </div>
+  </section>
 
-    <!-- Contato -->
-    <section id="contato" class="section">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+  <!-- Contato -->
+  <section id="contato" class="section">
+    <div class="container">
+      <h2>Contato</h2>
+      <p>Como as pessoas podem te contatar (e-mail, rede social, formulário).</p>
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p></p>
-        </div>
-    </footer>
+  <footer class="footer">
+    <div class="container">
+      <p>© 2025 — Seu Nome</p>
+    </div>
+  </footer>
 </body>
 </html>
