--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <h2></h2>
             <p></p>
         </div>
-    </section>
+        <h1>A BB Consultoria é uma empresa que realiza serviços na área florestal com foco em inventários, monitoramento e avaliação de povoamentos. Atua de forma técnica e sustentável, garantindo o melhor planejamento de inventário florestal para cada área avaliada.</h1>
+    </section> 
 
     <!-- Projetos -->
     <section id="projetos" class="section alt">
