Atualização do site

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
     </section>
 
     <!-- Projetos -->
-    <section id="projetos" class="section alt">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+<!-- Projetos -->
+<section id="projetos" class="section alt">
+    <div class="container sobre-container">
+        <img src="projeto-1.png" alt="Projeto 1" class="sobre-img">
+        <img src="projeto-2.png" alt="Projeto 2" class="sobre-img">
+    </div>
+</section>
+
 
     <!-- Publicações -->
     <section id="publicacoes" class="section">
