Atualização do site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <ul class="nav-links">
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#publicacoes">Publicações</a></li>
                 <li><a href="#recursos">Ensino</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
@@ -42,44 +41,71 @@
     </section>
 
     <!-- Projetos -->
-<!-- Projetos -->
-<section id="projetos" class="section alt">
-    <div class="container sobre-container">
-        <img src="projeto-1.png" alt="Projeto 1" class="sobre-img">
-        <img src="projeto-2.png" alt="Projeto 2" class="sobre-img">
+<<section id="projetos" class="section alt">
+    <div class="container">
+
+        <div class="carousel">
+            <div class="carousel-track">
+                <img src="projeto-1.png" alt="Projeto 1">
+                <img src="projeto-2.png" alt="Projeto 2">
+            </div>
+
+            <button class="carousel-btn prev">&#10094;</button>
+            <button class="carousel-btn next">&#10095;</button>
+        </div>
+
     </div>
 </section>
 
-
-    <!-- Publicações -->
-    <section id="publicacoes" class="section">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
-
     <!-- Recursos / Ensino -->
-    <section id="recursos" class="section alt">
-        <div class="container">
-            <h2></h2>
-            <p></p>
-        </div>
-    </section>
+<section id="recursos" class="section alt">
+    <div class="container cards-container">
 
-    <!-- Contato -->
-    <section id="contato" class="section">
-        <div class="container">
-            <h2></h2>
-            <p></p>
+        <div class="card">
+            <h3>📘 Aulas</h3>
+            <p>Slides, resumos e materiais utilizados em disciplinas e workshops.</p>
         </div>
-    </section>
 
-    <footer class="footer">
-        <div class="container">
-            <p></p>
+        <div class="card">
+            <h3>🌱 Materiais Aplicados</h3>
+            <p>Protocolos de campo, exemplos de inventário florestal, conforto térmico e indicadores ecológicos.</p>
         </div>
-    </footer>
+
+        <div class="card">
+            <h3>📂 Downloads</h3>
+            <p>Arquivos complementares, bases de dados, mapas e atividades práticas.</p>
+        </div>
+
+    </div>
+</section>
+
+<section id="contato" class="section">
+    <div class="container">
+        <h2>Contato</h2>
+        <p>Entre em contato comigo preenchendo o formulário abaixo:</p>
+
+        <form class="contato-form" action="mailto:bbertini@estudante.ufscar.br" method="POST" enctype="text/plain">
+            
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" required>
+
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <p>© 2025 • Desenvolvido por Bruna Bertini</p>
+    </div>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
