Atualização do site

--- a/index.html
+++ b/index.html
@@ -40,21 +40,24 @@
         </div>
     </section>
 
-    <!-- Projetos -->
-<<section id="projetos" class="section alt">
+    <section id="projetos" class="section">
     <div class="container">
+        <h2>Projetos</h2>
 
         <div class="carousel">
-            <div class="carousel-track">
+            <button class="prev">&#10094;</button>
+
+            <div class="carousel-inner">
                 <img src="projeto-1.png" alt="Projeto 1">
                 <img src="projeto-2.png" alt="Projeto 2">
             </div>
 
-            <button class="carousel-btn prev">&#10094;</button>
-            <button class="carousel-btn next">&#10095;</button>
+            <button class="next">&#10095;</button>
         </div>
 
     </div>
+</section>
+
 </section>
 
     <!-- Recursos / Ensino -->
